--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -1285,7 +1285,9 @@ body {
 div#applications {padding: 1em 0; text-align: center;}
 table#applications {margin-bottom: -0.5em;}
 table#applications th, table#applications td {vertical-align: baseline;}
-table#applications th {padding-left: 100px; text-align: left;}
+table#applications th {padding-left: 60px; text-align: left;}
+body.pillarindex table#applications {margin-left: 40px; width: auto;}
+body.tab-overview table#applications th {padding-left: 0;}
 table#applications td {padding-right: 20px; text-align: right;}
 #applications span {
   display: inline-block;
