--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -314,14 +314,14 @@ hr {
   margin-bottom: 8px;
 }
 #logincontrol {
-  position: absolute;
-  top: 21px;
-  right: 0px;
-  padding: 6px 16px 10px 10px !important;
-  padding: 5px 16px 10px 10px;
+  float: right;
+  height: 100%;
+}
+#logincontrol td {
   color: #FFFFFF;
   font-size: 11px;
   font-weight: bold;
+  vertical-align: middle;
 }
 #logincontrol a {color: #000000;}
 ul#applicationchooser {
