--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -216,6 +216,8 @@ hr, #globalheader label {
 
 /* === Page layout === */
 
+/*- The top of a page has a global header and a location bar. -*/
+
 #globalheader .logo {
   float: left;
 }
@@ -235,13 +237,104 @@ hr, #globalheader label {
   border-top: 1px solid #ccc;
   clear: both;
   position: relative;
-  margin: 0px 22px 0px 40px;
   padding-top: 10px;
   padding-bottom: 20px;
 }
 #globalfooter.extraspacing {
   padding-top: 50px;
 }
+
+/*- Underneath the global header and location bar is a help panel. -*/
+
+#help_panel {
+  visibility: hidden; /* global.js reveals it if JavaScript is available */
+}
+#help_panel.open,
+#help_panel.closed {
+  position: absolute;
+  float: left;
+  top: 47px;
+  left: 0px;
+  width: 350px;
+  z-index: 100;
+}
+#help_panel.closed {
+  left: -318px !important;
+}
+.help1 {
+  width: 350px;
+  background-color: #FFFFFF;
+  background-image: url(help_bg.gif);
+  background-repeat: repeat-y;
+  background-position: top right;
+}
+.help2 {
+  float: left;
+  width: 286px;
+  padding: 16px;
+}
+#help_panel.open .bottom,
+#help_panel.closed .bottom {
+  clear: both;
+  width: 350px;
+  height: 14px;
+  position: relative;
+  top: -2px;
+  background-color: transparent;
+  background-image: url(help_bottom_bg.gif);
+  background-repeat: no-repeat;
+  background-position: bottom right;
+}
+#help_panel.open a.open-close, #help_panel.closed a.open-close,
+a.open, a.closed {
+  float: left;
+  display: block;
+  width: 28px;
+  height: 120px;
+  text-indent: -9999px;
+  overflow: hidden;
+}
+
+#help_panel.open a.open-close, a.open {
+  background-image: url(help_ttl_open.gif);
+  background-repeat: no-repeat;
+  background-position: top left;
+}
+
+#help_panel.closed a.open-close, a.closed {
+	background-image: url(help_ttl_closed.gif);
+	background-repeat: no-repeat;
+	background-position: 0px 0px;
+}
+
+/*- The rest of the page is indented to keep clear of the help panel. -*/
+#nonhelp {margin: 0 20px 0 38px; border: 1px dotted green;}
+
+/*- App home pages and pillar indexes both have a heading and app buttons, -*/
+table#applications {margin-bottom: -0.5em;}
+table#applications th, table#applications td {vertical-align: baseline;}
+table#applications th {padding-left: 60px; text-align: left;}
+table#applications td {text-align: right;}
+/* though the pillar indexes have no watermark, so no heading indenting. */
+body.tab-overview table#applications th {padding-left: 0;}
+
+/* Other page types have a global search field. */
+#globalsearch {float: right; margin-top: 12px; width: 220px;}
+#globalsearch #q {border: 1px solid #a7c2ce; width: 170px;}
+#globalsearch #searchbutton {
+  position: relative;
+  top: 6px;
+  border: 0;
+  width: 20px;
+  height: 20px;
+  cursor: hand;
+  cursor: pointer;
+}
+#globalsearchscope {padding: 4px 0 0;}
+#globalsearchscope label {display: block; padding: 0 0 2px;}
+
+
+
 #colophon {
   float: left;
   width: 49%;
@@ -499,32 +592,6 @@ ul#applicationchooser li#applicationchooser_selected {
   margin-left: -18px; /* Extends the highlighted area to include the bullet. */
   padding: 3px 4px 3px 14px; /* 14px on the left makes room for the bullet. */ 
 }
-#globalsearch {
-  width: 220px;
-  float: right;
-  margin-top: 12px;
-}
-#globalsearch #q {
-  width: 170px;
-  border: 1px solid #A7C2CE;
-}
-#globalsearch #searchbutton {
-  position: relative;
-  top: 6px !important;
-  top: 5px;
-  border: 0;
-  width: 20px;
-  height: 20px;
-  cursor: hand;
-  cursor: pointer;
-}
-#globalsearchscope {
-  padding: 4px 0px 0px 0px;
-}
-#globalsearchscope label {
-  display: block;
-  padding: 0px 0px 2px 0px;
-}
 .check,
 .radio {
   background: transparent;
@@ -580,7 +647,7 @@ ul#applicationchooser li#applicationchooser_selected {
   background: none;
   color: black;
   float: left;
-  margin: 10px 0px 0px 38px;
+  margin: 10px 0 0;
   width: 70%;
 }
 #structuralobjectheading img {
@@ -611,7 +678,6 @@ ul#applicationchooser li#applicationchooser_selected {
 #mainarea {
   clear: both;
   min-width: 712px;
-  margin: 0 20px 0 38px;
   background-image: url(mainarea_bottom.gif);
   background-repeat: repeat-x;
   background-position: bottom left;
@@ -674,67 +740,6 @@ ul#applicationchooser li#applicationchooser_selected {
 #singlecolumn div.z {
   padding: 0 0 20px; /* XXX Makes the top right corner disappear */
 }
-#help_panel {
-  visibility: hidden; /* global.js reveals it if JavaScript is available */
-}
-#help_panel.open,
-#help_panel.closed {
-  position: absolute;
-  float: left;
-  top: 47px;
-  left: 0px;
-  width: 350px;
-  z-index: 100;
-}
-#help_panel.closed {
-  left: -318px !important;
-}
-.help1 {
-  width: 350px;
-  background-color: #FFFFFF;
-  background-image: url(help_bg.gif);
-  background-repeat: repeat-y;
-  background-position: top right;
-}
-.help2 {
-  float: left;
-  width: 286px;
-  padding: 16px;
-}
-#help_panel.open .bottom,
-#help_panel.closed .bottom {
-  clear: both;
-  width: 350px;
-  height: 14px;
-  position: relative;
-  top: -2px;
-  background-color: transparent;
-  background-image: url(help_bottom_bg.gif);
-  background-repeat: no-repeat;
-  background-position: bottom right;
-}
-#help_panel.open a.open-close, #help_panel.closed a.open-close,
-a.open, a.closed {
-  float: left;
-  display: block;
-  width: 28px;
-  height: 120px;
-  text-indent: -9999px;
-  overflow: hidden;
-}
-
-#help_panel.open a.open-close, a.open {
-  background-image: url(help_ttl_open.gif);
-  background-repeat: no-repeat;
-  background-position: top left;
-}
-
-#help_panel.closed a.open-close, a.closed {
-	background-image: url(help_ttl_closed.gif);
-	background-repeat: no-repeat;
-	background-position: 0px 0px;
-}
-
 /* --- Various custom list formats --- */
 
 #maincontent ol, #maincontent ul, #singlecolumn ul, #singlecolumn ol {
@@ -1187,7 +1192,7 @@ body {
 #portlets .portlet {
   width: 200px;
 }
-#singlecolumn {margin: 20px 20px 0 38px;} /* test: front page, FAQ page */
+#singlecolumn {margin: 20px 20px 0 0;} /* test: front page, FAQ page */
 #mainarea #singlecolumn {margin-right: 0;}
 
 /* ====== Content area styles ====== */
@@ -1196,12 +1201,6 @@ body {
 
 #applications {clear: both; width: 100%;}
 div#applications {padding: 1em 0; text-align: center;}
-table#applications {margin-bottom: -0.5em;}
-table#applications th, table#applications td {vertical-align: baseline;}
-table#applications th {padding-left: 60px; text-align: left;}
-body.pillarindex table#applications {margin-left: 40px; width: auto;}
-body.tab-overview table#applications th {padding-left: 0;}
-table#applications td {padding-right: 20px; text-align: right;}
 #applications span {
   display: inline-block;
   float: right;
