--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -228,9 +228,6 @@ hr {
   background-repeat: repeat-x;
   background-position: top center;
 }
-#globalfooter.extraspacing {
-  padding-top: 50px;
-}
 /* Home icon and link. */
 #globalheader a.home {
   display: block;
@@ -528,7 +525,11 @@ body.pillarindex table#applications th {padding-left: 0;}
 #globalsearchscope {padding: 4px 0 0;}
 #globalsearchscope label {display: block; padding: 0 0 2px;}
 
-
+#globalfooter {
+  border-top: 1px solid #ccc;
+  clear: both;
+  padding-top: 0.5em;
+}
 
 #colophon {
   float: left;
@@ -1288,9 +1289,6 @@ div#applications {padding: 1em 0; text-align: center;}
 .tab-unknown .central {font-size: 1.75em;}
 .central input {
   font-size: 1em;
-}
-div.bordered {
-  padding: 2em 4em;
 }
 #application-summary, #application-footer {
   font-size: 1.5em;
