--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -1238,6 +1238,7 @@ body {
   padding-left: 240px;
   padding-right: 20px;
 }
+body.applicationhome #container {padding-left: 20px;}
 #singlecolumn #container {
   padding-left: 20px;
   padding-top: 50px;
@@ -1352,6 +1353,8 @@ div.three.column.left, div.three.column.middle, div.three.column.right {
 ul.buttons {margin: 2em 0 4em 0 !important; padding: 0 !important;}
 /*- without !important, gets overridden by the '#maincontent ol' etc rule -*/
 ul.buttons li {display: inline; margin-right: 1em;}
+body.applicationhome ul.buttons {float: right; margin: 0 0 0 1em !important;}
+body.applicationhome ul.buttons li {display: block; margin-right: 0;}
 #singlecolumn ul.buttons {float: right; margin: 0;}
 #singlecolumn ul.buttons li {margin: 0;}
 #singlecolumn ul.buttons li {display: block;}
