--- a/lib/canonical/launchpad/icing/marketing-style.css
+++ b/lib/canonical/launchpad/icing/marketing-style.css
@@ -378,14 +378,36 @@ body#tour #header dl#navigation ul li#liTour a {
   margin-bottom: 40px;
 }
 
-#main .feature {
-  float: left;
-  width: 270px; height: 260px;
-  padding-right: 60px;
+/* Feature screenshots */
+
+#about h2.headline {
+  color: #159cc8;
+  font-size: 2.2em;
+  font-weight: normal;
+  line-height: 1.3em;
+  margin-bottom: 25px;
+  margin-left: 254px;
 }
 
-#main .feature h3 { margin-bottom: -2px; }
-#main .feature h4.byline { color: #999; font-size: 1.1em; margin-bottom: 10px;}
+#features {
+    clear: both;
+}
+
+#features .feature {
+  float: left;
+  padding-right: 20px;
+  width: 170px;
+}
+
+#features img {
+    display: block;
+    height: 160px; width: 160;
+    background-color: #DDD;
+}
+
+#about #content {
+  clear: both;
+}
 
 #main ul#tools {
   overflow: hidden;
@@ -450,6 +472,7 @@ body#tour #header dl#navigation ul li#liTour a {
   color: #fff;
   text-align: center;
   font-size: 1.6em;
+  clear: both;
 }
 
 #main p { margin-bottom: 10px; }
