--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -915,7 +915,7 @@ body.tab-overview #actions h2, body.tab-overview #actions h2:hover {
   background-color: #83ad23;
 }
 
-.item {margin-bottom: 1em;}
+.product.series, .project {margin-bottom: 1em;}
 
 /* --- Code --- */
 
